gitops/workloads/demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: demo-app
  labels:
    app: demo-app
spec:
  ingressClassName: traefik
  rules:
    - host: demo.192.168.250.165.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 9898
    - host: demo.192.168.250.223.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 9898
